--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -24,7 +24,7 @@
         "textAlignment": "center"
       }
     },
-    "info-card#button-right": {
+    "info-card#button-left": {
       "props": {
         "isFullModeStyle": false,
         "textPosition": "right",
