--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,5 +1,5 @@
 {
-  "store.home": { 
+  "store.home": {
     "blocks": [
       "rich-text",
       "info-card#button-right",
@@ -7,36 +7,35 @@
     ]
   },
   "rich-text": {
-      "props":{
-          "text":"**Hello, World!**",
-          "textPosition": "RIGHT"
-      }
-  },
-    "info-card#button-right": {
-      "props": {
-        "isFullModeStyle": false,
-        "textPosition": "right",
-        "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-rosa-min.png",
-        "headline": "Vintage Pink",
-        "subhead": "Give your kitchen a boho style adding vintage apparels.<br>Available until January 2020.",
-        "callToActionMode": "button",
-        "callToActionText": "Explore",
-        "callToActionUrl": "/sale/d",
-        "textAlignment": "center"
-      }
-    },
-    "info-card#button-left": {
-      "props": {
-        "isFullModeStyle": false,
-        "textPosition": "left",
-        "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-cinza-min.png",
-        "headline": "Shining chrome",
-        "subhead": "Give your kitchen a cool style adding warm metallic finishes.<br>Available until January 2020.",
-        "callToActionMode": "button",
-        "callToActionText": "Explore",
-        "callToActionUrl": "/sale/d",
-
-        "textAlignment": "textPosition"
-      }
+    "props": {
+      "text": "**Hello, World!**",
+      "textPosition": "RIGHT"
     }
+  },
+  "info-card#button-right": {
+    "props": {
+    "isFullModeStyle": false,
+    "textPosition": "right",
+    "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-rosa-min.png",
+    "headline": "Vintage Pink",
+    "subhead": "Give your kitchen a boho style adding vintage apparels.<br>Available until January 2020.",
+    "callToActionMode": "button",
+    "callToActionText": "Explore",
+    "callToActionUrl": "/sale/d",
+    "textAlignment": "center"
+    }
+  },
+  "info-card#button-left": {
+    "props": {
+    "isFullModeStyle": false,
+    "textPosition": "left",
+    "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-cinza-min.png",
+    "headline": "Shining chrome",
+    "subhead": "Give your kitchen a cool style adding warm metallic finishes.<br>Available until January 2020.",
+    "callToActionMode": "link",
+    "callToActionText": "Go to Collection",
+    "callToActionUrl": "/sale/d",
+    "textAlignment": "center"
+    }
+  }
 }
