--- a/store/blocks/default.jsonc
+++ b/store/blocks/default.jsonc
@@ -26,6 +26,7 @@
     "children": [
       "product-summary-add-to-list-button",
       "product-summary-name",
+      "product-summary.shelf"
       "product-rating-inline",
       "product-summary-space",
       "product-summary-price",
