--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,6 +1,6 @@
 {
   "store.home": {
-    "children": [
+    "blocks": [
       "rich-text",
       "info-card#button-right",
       "info-card#button-left",
